@@ -78,8 +78,9 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2009-2016 Michal Josef Špaček
-     BSD 2-Clause License
+    © 2009-2016 Michal Josef Špaček
+
+    BSD 2-Clause License
 
 VERSION
     0.09
