@@ -1,4 +1,5 @@
 0.09
+ - Improve LICENSE AND COPYRIGHT section in doc.
  - Update Module::Install to 1.19 version.
  - Update author github username.
  - Update author name.
